# sel-claw

./: Cargo.toml  README.md  build.rs
example_application/: Cargo.toml  build.rs  sel4.toml
example_application/selfe-start/: Cargo.toml  build.rs
example_application/selfe-start/src/: env.rs  lib.rs  start.rs
example_application/selfe-start/src/arch/aarch64/: registers.S
example_application/selfe-start/src/env/: auxv.rs  tls.rs
example_application/src/: main.rs
sel-claw-build/: Cargo.toml
sel-claw-build/src/: compilation.rs  default_config.toml  main.rs
sel-claw-build/src/model/: mod.rs
selfe-config/: Cargo.toml
selfe-config/src/: CMakeLists_kernel.txt  CMakeLists_lib.txt  compilation.rs  default_config.toml  main.rs
selfe-config/src/model/: deserialization.rs
selfe-runtime/: Cargo.toml
src/: bindings.rs  debug.rs  elf.rs  env.rs  lib.rs  start.rs
src/arch/aarch64/: entry.S  entry_rootserver.S
src/bindings/: compile_time_assertions.rs
src/env/: auxv.rs  tls.rs
