# Copyright (c) 2015 The Robigalia Project Developers
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license <LICENSE-MIT
# or http://opensource.org/licenses/MIT>, at your option. All files in the
# project carrying such notice may not be copied, modified, or distributed
# except according to those terms.
[package]
name = "sel-claw"
version = "0.1.0"
authors = ["Corey Richardson <corey@octayn.net>", "Russell Mull <russell@auxon.io>", "Zachary Pierce <zack@auxon.io>"]
description = "Crate defining the entry point to the initial thread on seL4"
documentation = "https://doc.robigalia.org/sel4_start"
repository = "https://gitlab.com/robigalia/sel4-start"
readme = "README.md"
license = "MIT/Apache-2.0"
resolver = "2"

[dependencies]

[build-dependencies]
sel-claw-build = "0.2.2"
bindgen = { version = "0.52", default-features = false }
cc = "1.0"
toml = "0.5"
proc-macro2 = "0.4"
itertools = "0.8.0"
quote = "0.6"

[features]
default = ["nano_libc"]
panic_handler = []
nano_libc = []

[patch.crates-io]
selfe-arc = { path = "/selfe-arc" }
sel-claw-build = { path = "/sel-claw-build" }

