[package]
name = "example"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>", "Zachary Pierce <zack@auxon.io>"]
edition = "2018"
resolver = "2"

[dependencies]
sel-claw = { path = "../", features = ["panic_handler", "nano_libc"] }
selfe-arc = { version = "0.1", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
selfe-arc = "0.1"

[patch.crates-io]
selfe-arc = { path = "../selfe-arc" }
sel-claw = { path = "../" }
sel-claw-build = { path = "../sel-claw-build" }
